PappersConnecterSalesforce/force-app/main/default/objects/Financial_Statement__c/Financial_Statement__c.object-meta.xml
<CustomObject>
    <label>Financial Statement</label>
    <nameField>
        <label>Financial Statement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Statements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>