PappersConnecterSalesforce/force-app/main/default/objects/Financial_Statement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Statements</relationshipLabel>
    <relationshipName>Financial_Statements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>