PappersConnecterSalesforce/force-app/main/default/objects/Financial_Statement__c/fields/Annee__c.field-meta.xml
<CustomField>
    <fullName>Annee__c</fullName>
    <label>Année</label>
    <length>255</length>
    <type>Text</type>
</CustomField>