PappersConnecterSalesforce/force-app/main/default/objects/Financial_Statement__c/fields/Autonomie_financiere__c.field-meta.xml
<CustomField>
    <fullName>Autonomie_financiere__c</fullName>
    <inlineHelpText>En (%)</inlineHelpText>
    <label>Autonomie financière</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>