PappersConnecterSalesforce/force-app/main/default/objects/Financial_Statement__c/fields/BFR_j_de_CA__c.field-meta.xml
<CustomField>
    <fullName>BFR_j_de_CA__c</fullName>
    <label>BFR Jours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>