PappersConnecterSalesforce/force-app/main/default/objects/Financial_Statement__c/fields/Capacit_de_remboursement__c.field-meta.xml
<CustomField>
    <fullName>Capacit_de_remboursement__c</fullName>
    <label>Capacité de remboursement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>