PappersConnecterSalesforce/force-app/main/default/objects/Financial_Statement__c/fields/Capacite_dautofinancement__c.field-meta.xml
<CustomField>
    <fullName>Capacite_dautofinancement__c</fullName>
    <inlineHelpText>En (€)</inlineHelpText>
    <label>Capacité d&apos;autofinancement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>