PappersConnecterSalesforce/force-app/main/default/objects/Financial_Statement__c/fields/chiffre_affaires__c.field-meta.xml
<CustomField>
    <fullName>chiffre_affaires__c</fullName>
    <inlineHelpText>En (€)</inlineHelpText>
    <label>Chiffre d&apos;affaires</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>