PappersConnecterSalesforce/force-app/main/default/objects/Financial_Statement__c/fields/Couverture_des_dettes__c.field-meta.xml
<CustomField>
    <fullName>Couverture_des_dettes__c</fullName>
    <label>Couverture des dettes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>