PappersConnecterSalesforce/force-app/main/default/objects/Financial_Statement__c/fields/Dettes_financires__c.field-meta.xml
<CustomField>
    <fullName>Dettes_financires__c</fullName>
    <inlineHelpText>En (€)</inlineHelpText>
    <label>Dettes financières</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>