PappersConnecterSalesforce/force-app/main/default/objects/Financial_Statement__c/fields/EBITDA_EBE__c.field-meta.xml
<CustomField>
    <fullName>EBITDA_EBE__c</fullName>
    <inlineHelpText>En (€)</inlineHelpText>
    <label>EBITDA - EBE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>