PappersConnecterSalesforce/force-app/main/default/objects/Financial_Statement__c/fields/Fonds_de_roulement_net_global__c.field-meta.xml
<CustomField>
    <fullName>Fonds_de_roulement_net_global__c</fullName>
    <inlineHelpText>En (€)</inlineHelpText>
    <label>Fonds de roulement net global</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>