PappersConnecterSalesforce/force-app/main/default/objects/Financial_Statement__c/fields/Fonds_propres__c.field-meta.xml
<CustomField>
    <fullName>Fonds_propres__c</fullName>
    <inlineHelpText>En (€)</inlineHelpText>
    <label>Fonds propres</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>