PappersConnecterSalesforce/force-app/main/default/objects/Financial_Statement__c/fields/Impots_et_taxes__c.field-meta.xml
<CustomField>
    <fullName>Impots_et_taxes__c</fullName>
    <label>Impôts et taxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>