PappersConnecterSalesforce/force-app/main/default/objects/Financial_Statement__c/fields/Liquidit_generale__c.field-meta.xml
<CustomField>
    <fullName>Liquidit_generale__c</fullName>
    <label>Liquidité générale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>