PappersConnecterSalesforce/force-app/main/default/objects/Financial_Statement__c/fields/Marge_brute__c.field-meta.xml
<CustomField>
    <fullName>Marge_brute__c</fullName>
    <inlineHelpText>En (€)</inlineHelpText>
    <label>Marge brute</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>