PappersConnecterSalesforce/force-app/main/default/objects/Financial_Statement__c/fields/Marge_nette__c.field-meta.xml
<CustomField>
    <fullName>Marge_nette__c</fullName>
    <inlineHelpText>En (%)</inlineHelpText>
    <label>Marge nette</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>