PappersConnecterSalesforce/force-app/main/default/objects/Financial_Statement__c/fields/Ratio_dendettement_Gearing__c.field-meta.xml
<CustomField>
    <fullName>Ratio_dendettement_Gearing__c</fullName>
    <label>Ratio d&apos;endettement (Gearing)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>