PappersConnecterSalesforce/force-app/main/default/objects/Financial_Statement__c/fields/Rentabilit_sur_fonds_propres__c.field-meta.xml
<CustomField>
    <fullName>Rentabilit_sur_fonds_propres__c</fullName>
    <inlineHelpText>En (%)</inlineHelpText>
    <label>Rentabilité sur fonds propres</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>