PappersConnecterSalesforce/force-app/main/default/objects/Financial_Statement__c/fields/Rentabilite_economique__c.field-meta.xml
<CustomField>
    <fullName>Rentabilite_economique__c</fullName>
    <inlineHelpText>En (%)</inlineHelpText>
    <label>Rentabilité économique</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>