PappersConnecterSalesforce/force-app/main/default/objects/Financial_Statement__c/fields/Resultat_dexploitation__c.field-meta.xml
<CustomField>
    <fullName>Resultat_dexploitation__c</fullName>
    <inlineHelpText>En (€)</inlineHelpText>
    <label>Résultat d&apos;exploitation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>