PappersConnecterSalesforce/force-app/main/default/objects/Financial_Statement__c/fields/Resultat_net__c.field-meta.xml
<CustomField>
    <fullName>Resultat_net__c</fullName>
    <inlineHelpText>En (€)</inlineHelpText>
    <label>Résultat net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>