PappersConnecterSalesforce/force-app/main/default/objects/Financial_Statement__c/fields/Salaires_CA__c.field-meta.xml
<CustomField>
    <fullName>Salaires_CA__c</fullName>
    <label>Salaires / CA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>