PappersConnecterSalesforce/force-app/main/default/objects/Financial_Statement__c/fields/Salaires_et_charges_sociales__c.field-meta.xml
<CustomField>
    <fullName>Salaires_et_charges_sociales__c</fullName>
    <inlineHelpText>En (€)</inlineHelpText>
    <label>Salaires et charges sociales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>