PappersConnecterSalesforce/force-app/main/default/objects/Financial_Statement__c/fields/tat_des_dettes_1_an_au_plus__c.field-meta.xml
<CustomField>
    <fullName>tat_des_dettes_1_an_au_plus__c</fullName>
    <label>État des dettes à 1 an au plus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>