PappersConnecterSalesforce/force-app/main/default/objects/Financial_Statement__c/fields/Taux_de_marge_oprationnelle__c.field-meta.xml
<CustomField>
    <fullName>Taux_de_marge_oprationnelle__c</fullName>
    <inlineHelpText>En (%)</inlineHelpText>
    <label>Taux de marge opérationnelle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>