PappersConnecterSalesforce/force-app/main/default/objects/Financial_Statement__c/fields/Trsorerie__c.field-meta.xml
<CustomField>
    <fullName>Trsorerie__c</fullName>
    <inlineHelpText>En (€)</inlineHelpText>
    <label>Trésorerie</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>