PappersConnecterSalesforce/force-app/main/default/objects/Financial_Statement__c/fields/Valeur_ajoutee__c.field-meta.xml
<CustomField>
    <fullName>Valeur_ajoutee__c</fullName>
    <inlineHelpText>En (€)</inlineHelpText>
    <label>Valeur ajoutée</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>